pyquil/_parser/gen3/QuilParser.py
# Generated from Quil.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class QuilParser ( Parser ):

    grammarFileName = "Quil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'DEFGATE'", "'DEFCIRCUIT'", "'MEASURE'", 
                     "'LABEL'", "'HALT'", "'JUMP'", "'JUMP-WHEN'", "'JUMP-UNLESS'", 
                     "'RESET'", "'WAIT'", "'NOP'", "'INCLUDE'", "'PRAGMA'", 
                     "'DECLARE'", "'SHARING'", "'OFFSET'", "'AS'", "'MATRIX'", 
                     "'PERMUTATION'", "'NEG'", "'NOT'", "'TRUE'", "'FALSE'", 
                     "'AND'", "'IOR'", "'XOR'", "'OR'", "'ADD'", "'SUB'", 
                     "'MUL'", "'DIV'", "'MOVE'", "'EXCHANGE'", "'CONVERT'", 
                     "'EQ'", "'GT'", "'GE'", "'LT'", "'LE'", "'LOAD'", "'STORE'", 
                     "'pi'", "'i'", "'SIN'", "'COS'", "'SQRT'", "'EXP'", 
                     "'CIS'", "'+'", "'-'", "'*'", "'/'", "'^'", "'DEFWAVEFORM'", 
                     "'PULSE '", "'SET-FREQUENCY'", "'SET-PHASE'", "'SHIFT-PHASE'", 
                     "'SWAP-PHASES'", "'SET-SCALE'", "'CAPTURE'", "'RAW-CAPTURE'", 
                     "'DEFCAL'", "'DELAY'", "'FENCE'", "'CONTROLLED'", "'DAGGER'", 
                     "'FORKED'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'.'", "','", "'('", "')'", 
                     "'['", "']'", "':'", "'%'", "'@'", "'\"'", "'_'", "'    '", 
                     "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "DEFGATE", "DEFCIRCUIT", "MEASURE", "LABEL", 
                      "HALT", "JUMP", "JUMPWHEN", "JUMPUNLESS", "RESET", 
                      "WAIT", "NOP", "INCLUDE", "PRAGMA", "DECLARE", "SHARING", 
                      "OFFSET", "AS", "MATRIX", "PERMUTATION", "NEG", "NOT", 
                      "TRUE", "FALSE", "AND", "IOR", "XOR", "OR", "ADD", 
                      "SUB", "MUL", "DIV", "MOVE", "EXCHANGE", "CONVERT", 
                      "EQ", "GT", "GE", "LT", "LE", "LOAD", "STORE", "PI", 
                      "I", "SIN", "COS", "SQRT", "EXP", "CIS", "PLUS", "MINUS", 
                      "TIMES", "DIVIDE", "POWER", "DEFWAVEFORM", "PULSE", 
                      "SETFREQUENCY", "SETPHASE", "SHIFTPHASE", "SWAPPHASES", 
                      "SETSCALE", "CAPTURE", "RAWCAPTURE", "DEFCAL", "DELAY", 
                      "FENCE", "CONTROLLED", "DAGGER", "FORKED", "IDENTIFIER", 
                      "COLONTERMIDENT", "INT", "FLOAT", "STRING", "PERIOD", 
                      "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "COLON", "PERCENTAGE", "AT", "QUOTE", "UNDERSCORE", 
                      "TAB", "NEWLINE", "COMMENT", "SPACE", "INVALID" ]

    RULE_quil = 0
    RULE_allInstr = 1
    RULE_instr = 2
    RULE_gate = 3
    RULE_name = 4
    RULE_qubit = 5
    RULE_param = 6
    RULE_modifier = 7
    RULE_defGate = 8
    RULE_variable = 9
    RULE_gatetype = 10
    RULE_matrix = 11
    RULE_matrixRow = 12
    RULE_defCircuit = 13
    RULE_qubitVariable = 14
    RULE_circuitQubit = 15
    RULE_circuitGate = 16
    RULE_circuitMeasure = 17
    RULE_circuitResetState = 18
    RULE_circuitInstr = 19
    RULE_circuit = 20
    RULE_measure = 21
    RULE_addr = 22
    RULE_defLabel = 23
    RULE_label = 24
    RULE_halt = 25
    RULE_jump = 26
    RULE_jumpWhen = 27
    RULE_jumpUnless = 28
    RULE_resetState = 29
    RULE_wait = 30
    RULE_memoryDescriptor = 31
    RULE_offsetDescriptor = 32
    RULE_classicalUnary = 33
    RULE_classicalBinary = 34
    RULE_logicalBinaryOp = 35
    RULE_arithmeticBinaryOp = 36
    RULE_move = 37
    RULE_exchange = 38
    RULE_convert = 39
    RULE_load = 40
    RULE_store = 41
    RULE_classicalComparison = 42
    RULE_nop = 43
    RULE_include = 44
    RULE_pragma = 45
    RULE_pragma_name = 46
    RULE_expression = 47
    RULE_function = 48
    RULE_sign = 49
    RULE_number = 50
    RULE_imaginaryN = 51
    RULE_realN = 52
    RULE_defWaveform = 53
    RULE_pulse = 54
    RULE_setFrequency = 55
    RULE_setPhase = 56
    RULE_shiftPhase = 57
    RULE_swapPhases = 58
    RULE_setScale = 59
    RULE_capture = 60
    RULE_rawCapture = 61
    RULE_defCalibration = 62
    RULE_defMeasCalibration = 63
    RULE_delay = 64
    RULE_fence = 65
    RULE_formalQubit = 66
    RULE_namedParam = 67
    RULE_frame = 68
    RULE_waveform = 69
    RULE_colonTerminatedName = 70

    ruleNames =  [ "quil", "allInstr", "instr", "gate", "name", "qubit", 
                   "param", "modifier", "defGate", "variable", "gatetype", 
                   "matrix", "matrixRow", "defCircuit", "qubitVariable", 
                   "circuitQubit", "circuitGate", "circuitMeasure", "circuitResetState", 
                   "circuitInstr", "circuit", "measure", "addr", "defLabel", 
                   "label", "halt", "jump", "jumpWhen", "jumpUnless", "resetState", 
                   "wait", "memoryDescriptor", "offsetDescriptor", "classicalUnary", 
                   "classicalBinary", "logicalBinaryOp", "arithmeticBinaryOp", 
                   "move", "exchange", "convert", "load", "store", "classicalComparison", 
                   "nop", "include", "pragma", "pragma_name", "expression", 
                   "function", "sign", "number", "imaginaryN", "realN", 
                   "defWaveform", "pulse", "setFrequency", "setPhase", "shiftPhase", 
                   "swapPhases", "setScale", "capture", "rawCapture", "defCalibration", 
                   "defMeasCalibration", "delay", "fence", "formalQubit", 
                   "namedParam", "frame", "waveform", "colonTerminatedName" ]

    EOF = Token.EOF
    DEFGATE=1
    DEFCIRCUIT=2
    MEASURE=3
    LABEL=4
    HALT=5
    JUMP=6
    JUMPWHEN=7
    JUMPUNLESS=8
    RESET=9
    WAIT=10
    NOP=11
    INCLUDE=12
    PRAGMA=13
    DECLARE=14
    SHARING=15
    OFFSET=16
    AS=17
    MATRIX=18
    PERMUTATION=19
    NEG=20
    NOT=21
    TRUE=22
    FALSE=23
    AND=24
    IOR=25
    XOR=26
    OR=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOVE=32
    EXCHANGE=33
    CONVERT=34
    EQ=35
    GT=36
    GE=37
    LT=38
    LE=39
    LOAD=40
    STORE=41
    PI=42
    I=43
    SIN=44
    COS=45
    SQRT=46
    EXP=47
    CIS=48
    PLUS=49
    MINUS=50
    TIMES=51
    DIVIDE=52
    POWER=53
    DEFWAVEFORM=54
    PULSE=55
    SETFREQUENCY=56
    SETPHASE=57
    SHIFTPHASE=58
    SWAPPHASES=59
    SETSCALE=60
    CAPTURE=61
    RAWCAPTURE=62
    DEFCAL=63
    DELAY=64
    FENCE=65
    CONTROLLED=66
    DAGGER=67
    FORKED=68
    IDENTIFIER=69
    COLONTERMIDENT=70
    INT=71
    FLOAT=72
    STRING=73
    PERIOD=74
    COMMA=75
    LPAREN=76
    RPAREN=77
    LBRACKET=78
    RBRACKET=79
    COLON=80
    PERCENTAGE=81
    AT=82
    QUOTE=83
    UNDERSCORE=84
    TAB=85
    NEWLINE=86
    COMMENT=87
    SPACE=88
    INVALID=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QuilContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QuilParser.EOF, 0)

        def allInstr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuilParser.AllInstrContext)
            else:
                return self.getTypedRuleContext(QuilParser.AllInstrContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(QuilParser.NEWLINE)
            else:
                return self.getToken(QuilParser.NEWLINE, i)

        def getRuleIndex(self):
            return QuilParser.RULE_quil

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuil" ):
                listener.enterQuil(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuil" ):
                listener.exitQuil(self)




    def quil(self):

        localctx = QuilParser.QuilContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_quil)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QuilParser.DEFGATE) | (1 << QuilParser.DEFCIRCUIT) | (1 << QuilParser.MEASURE) | (1 << QuilParser.LABEL) | (1 << QuilParser.HALT) | (1 << QuilParser.JUMP) | (1 << QuilParser.JUMPWHEN) | (1 << QuilParser.JUMPUNLESS) | (1 << QuilParser.RESET) | (1 << QuilParser.WAIT) | (1 << QuilParser.NOP) | (1 << QuilParser.INCLUDE) | (1 << QuilParser.PRAGMA) | (1 << QuilParser.DECLARE) | (1 << QuilParser.NEG) | (1 << QuilParser.NOT) | (1 << QuilParser.TRUE) | (1 << QuilParser.FALSE) | (1 << QuilParser.AND) | (1 << QuilParser.IOR) | (1 << QuilParser.XOR) | (1 << QuilParser.OR) | (1 << QuilParser.ADD) | (1 << QuilParser.SUB) | (1 << QuilParser.MUL) | (1 << QuilParser.DIV) | (1 << QuilParser.MOVE) | (1 << QuilParser.EXCHANGE) | (1 << QuilParser.CONVERT) | (1 << QuilParser.EQ) | (1 << QuilParser.GT) | (1 << QuilParser.GE) | (1 << QuilParser.LT) | (1 << QuilParser.LE) | (1 << QuilParser.LOAD) | (1 << QuilParser.STORE) | (1 << QuilParser.DEFWAVEFORM) | (1 << QuilParser.PULSE) | (1 << QuilParser.SETFREQUENCY) | (1 << QuilParser.SETPHASE) | (1 << QuilParser.SHIFTPHASE) | (1 << QuilParser.SWAPPHASES) | (1 << QuilParser.SETSCALE) | (1 << QuilParser.CAPTURE) | (1 << QuilParser.RAWCAPTURE) | (1 << QuilParser.DEFCAL))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (QuilParser.DELAY - 64)) | (1 << (QuilParser.FENCE - 64)) | (1 << (QuilParser.CONTROLLED - 64)) | (1 << (QuilParser.DAGGER - 64)) | (1 << (QuilParser.FORKED - 64)) | (1 << (QuilParser.IDENTIFIER - 64)))) != 0):
                self.state = 142
                self.allInstr()


            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 145
                        self.match(QuilParser.NEWLINE)
                        self.state = 148 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==QuilParser.NEWLINE):
                            break

                    self.state = 150
                    self.allInstr() 
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuilParser.NEWLINE:
                self.state = 156
                self.match(QuilParser.NEWLINE)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(QuilParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllInstrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defGate(self):
            return self.getTypedRuleContext(QuilParser.DefGateContext,0)


        def defCircuit(self):
            return self.getTypedRuleContext(QuilParser.DefCircuitContext,0)


        def defWaveform(self):
            return self.getTypedRuleContext(QuilParser.DefWaveformContext,0)


        def defCalibration(self):
            return self.getTypedRuleContext(QuilParser.DefCalibrationContext,0)


        def defMeasCalibration(self):
            return self.getTypedRuleContext(QuilParser.DefMeasCalibrationContext,0)


        def instr(self):
            return self.getTypedRuleContext(QuilParser.InstrContext,0)


        def getRuleIndex(self):
            return QuilParser.RULE_allInstr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllInstr" ):
                listener.enterAllInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllInstr" ):
                listener.exitAllInstr(self)




    def allInstr(self):

        localctx = QuilParser.AllInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_allInstr)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.defGate()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.defCircuit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.defWaveform()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.defCalibration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.defMeasCalibration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.instr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fence(self):
            return self.getTypedRuleContext(QuilParser.FenceContext,0)


        def delay(self):
            return self.getTypedRuleContext(QuilParser.DelayContext,0)


        def gate(self):
            return self.getTypedRuleContext(QuilParser.GateContext,0)


        def measure(self):
            return self.getTypedRuleContext(QuilParser.MeasureContext,0)


        def defLabel(self):
            return self.getTypedRuleContext(QuilParser.DefLabelContext,0)


        def halt(self):
            return self.getTypedRuleContext(QuilParser.HaltContext,0)


        def jump(self):
            return self.getTypedRuleContext(QuilParser.JumpContext,0)


        def jumpWhen(self):
            return self.getTypedRuleContext(QuilParser.JumpWhenContext,0)


        def jumpUnless(self):
            return self.getTypedRuleContext(QuilParser.JumpUnlessContext,0)


        def resetState(self):
            return self.getTypedRuleContext(QuilParser.ResetStateContext,0)


        def wait(self):
            return self.getTypedRuleContext(QuilParser.WaitContext,0)


        def classicalUnary(self):
            return self.getTypedRuleContext(QuilParser.ClassicalUnaryContext,0)


        def classicalBinary(self):
            return self.getTypedRuleContext(QuilParser.ClassicalBinaryContext,0)


        def classicalComparison(self):
            return self.getTypedRuleContext(QuilParser.ClassicalComparisonContext,0)


        def load(self):
            return self.getTypedRuleContext(QuilParser.LoadContext,0)


        def store(self):
            return self.getTypedRuleContext(QuilParser.StoreContext,0)


        def nop(self):
            return self.getTypedRuleContext(QuilParser.NopContext,0)


        def include(self):
            return self.getTypedRuleContext(QuilParser.IncludeContext,0)


        def pragma(self):
            return self.getTypedRuleContext(QuilParser.PragmaContext,0)


        def pulse(self):
            return self.getTypedRuleContext(QuilParser.PulseContext,0)


        def setFrequency(self):
            return self.getTypedRuleContext(QuilParser.SetFrequencyContext,0)


        def setPhase(self):
            return self.getTypedRuleContext(QuilParser.SetPhaseContext,0)


        def shiftPhase(self):
            return self.getTypedRuleContext(QuilParser.ShiftPhaseContext,0)


        def swapPhases(self):
            return self.getTypedRuleContext(QuilParser.SwapPhasesContext,0)


        def setScale(self):
            return self.getTypedRuleContext(QuilParser.SetScaleContext,0)


        def capture(self):
            return self.getTypedRuleContext(QuilParser.CaptureContext,0)


        def rawCapture(self):
            return self.getTypedRuleContext(QuilParser.RawCaptureContext,0)


        def memoryDescriptor(self):
            return self.getTypedRuleContext(QuilParser.MemoryDescriptorContext,0)


        def getRuleIndex(self):
            return QuilParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)




    def instr(self):

        localctx = QuilParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instr)
        try:
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QuilParser.FENCE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.fence()
                pass
            elif token in [QuilParser.DELAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.delay()
                pass
            elif token in [QuilParser.CONTROLLED, QuilParser.DAGGER, QuilParser.FORKED, QuilParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.gate()
                pass
            elif token in [QuilParser.MEASURE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.measure()
                pass
            elif token in [QuilParser.LABEL]:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.defLabel()
                pass
            elif token in [QuilParser.HALT]:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.halt()
                pass
            elif token in [QuilParser.JUMP]:
                self.enterOuterAlt(localctx, 7)
                self.state = 178
                self.jump()
                pass
            elif token in [QuilParser.JUMPWHEN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 179
                self.jumpWhen()
                pass
            elif token in [QuilParser.JUMPUNLESS]:
                self.enterOuterAlt(localctx, 9)
                self.state = 180
                self.jumpUnless()
                pass
            elif token in [QuilParser.RESET]:
                self.enterOuterAlt(localctx, 10)
                self.state = 181
                self.resetState()
                pass
            elif token in [QuilParser.WAIT]:
                self.enterOuterAlt(localctx, 11)
                self.state = 182
                self.wait()
                pass
            elif token in [QuilParser.NEG, QuilParser.NOT, QuilParser.TRUE, QuilParser.FALSE]:
                self.enterOuterAlt(localctx, 12)
                self.state = 183
                self.classicalUnary()
                pass
            elif token in [QuilParser.AND, QuilParser.IOR, QuilParser.XOR, QuilParser.OR, QuilParser.ADD, QuilParser.SUB, QuilParser.MUL, QuilParser.DIV, QuilParser.MOVE, QuilParser.EXCHANGE, QuilParser.CONVERT]:
                self.enterOuterAlt(localctx, 13)
                self.state = 184
                self.classicalBinary()
                pass
            elif token in [QuilParser.EQ, QuilParser.GT, QuilParser.GE, QuilParser.LT, QuilParser.LE]:
                self.enterOuterAlt(localctx, 14)
                self.state = 185
                self.classicalComparison()
                pass
            elif token in [QuilParser.LOAD]:
                self.enterOuterAlt(localctx, 15)
                self.state = 186
                self.load()
                pass
            elif token in [QuilParser.STORE]:
                self.enterOuterAlt(localctx, 16)
                self.state = 187
                self.store()
                pass
            elif token in [QuilParser.NOP]:
                self.enterOuterAlt(localctx, 17)
                self.state = 188
                self.nop()
                pass
            elif token in [QuilParser.INCLUDE]:
                self.enterOuterAlt(localctx, 18)
                self.state = 189
                self.include()
                pass
            elif token in [QuilParser.PRAGMA]:
                self.enterOuterAlt(localctx, 19)
                self.state = 190
                self.pragma()
                pass
            elif token in [QuilParser.PULSE]:
                self.enterOuterAlt(localctx, 20)
                self.state = 191
                self.pulse()
                pass
            elif token in [QuilParser.SETFREQUENCY]:
                self.enterOuterAlt(localctx, 21)
                self.state = 192
                self.setFrequency()
                pass
            elif token in [QuilParser.SETPHASE]:
                self.enterOuterAlt(localctx, 22)
                self.state = 193
                self.setPhase()
                pass
            elif token in [QuilParser.SHIFTPHASE]:
                self.enterOuterAlt(localctx, 23)
                self.state = 194
                self.shiftPhase()
                pass
            elif token in [QuilParser.SWAPPHASES]:
                self.enterOuterAlt(localctx, 24)
                self.state = 195
                self.swapPhases()
                pass
            elif token in [QuilParser.SETSCALE]:
                self.enterOuterAlt(localctx, 25)
                self.state = 196
                self.setScale()
                pass
            elif token in [QuilParser.CAPTURE]:
                self.enterOuterAlt(localctx, 26)
                self.state = 197
                self.capture()
                pass
            elif token in [QuilParser.RAWCAPTURE]:
                self.enterOuterAlt(localctx, 27)
                self.state = 198
                self.rawCapture()
                pass
            elif token in [QuilParser.DECLARE]:
                self.enterOuterAlt(localctx, 28)
                self.state = 199
                self.memoryDescriptor()
                pass
            else:
                raise NoViableAltException(self)
